# QuirkLLM

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  TECHNICAL_DECISIONS.md  check.sh  pyproject.toml  run_tests.sh
quirkllm/: __init__.py  __main__.py
quirkllm/analyzer/: __init__.py  framework_detector.py  package_detector.py  project_analyzer.py
quirkllm/backends/: __init__.py  base.py  llamacpp.py  mlx_backend.py
quirkllm/cli/: prompts.py  repl.py  response_handler.py
quirkllm/core/: __init__.py  action_handler.py  code_parser.py  config.py  context_manager.py  conversation.py  profile_manager.py  system_detector.py  tool_parser.py
quirkllm/file_ops/: __init__.py  file_manager.py
quirkllm/knowledge/: __init__.py  document_processor.py  ingestion_pipeline.py  knowledge_manager.py  pdf_parser.py  web_crawler.py
quirkllm/mcp/: __init__.py  config.py  protocol.py  server.py  tools.py
quirkllm/model/: __init__.py  downloader.py
quirkllm/modes/: __init__.py  base.py  chat_mode.py  ghost_mode.py  plan_mode.py  registry.py  safety_checker.py  yami_mode.py
quirkllm/rag/: embeddings.py  lancedb_store.py  retriever.py
quirkllm/utils/: __init__.py  impact_analyzer.py  plan_generator.py
tests/: test_placeholder.py
tests/benchmarks/: __init__.py  test_performance.py
tests/integration/: test_backend_integration.py  test_cli_flow.py  test_config_integration.py  test_embeddings_live.py  test_error_scenarios.py  test_inference.py  test_mode_workflows.py  test_phase3_integration.py  test_phase3_simple.py  test_phase5_integration.py
tests/unit/: test_main.py
tests/unit/analyzer/: __init__.py  test_framework_detector.py  test_package_detector.py  test_project_analyzer.py
tests/unit/backends/: test_backend.py  test_backend_coverage.py  test_llamacpp.py  test_mlx_backend.py
tests/unit/cli/: test_repl.py  test_repl_coverage.py  test_response_handler.py
tests/unit/core/: test_action_handler.py  test_code_parser.py  test_config.py  test_context_manager.py  test_conversation.py  test_file_context_manager.py  test_profile_manager.py  test_system_detector.py  test_tool_parser.py
tests/unit/file_ops/: test_file_manager.py
tests/unit/knowledge/: __init__.py  test_document_processor.py  test_ingestion_pipeline.py  test_knowledge_manager.py  test_pdf_parser.py  test_web_crawler.py
tests/unit/mcp/: __init__.py  test_config.py  test_protocol.py  test_server.py  test_tools.py
tests/unit/model/: __init__.py  test_downloader.py
tests/unit/modes/: __init__.py  test_base.py  test_chat_mode.py  test_ghost_mode.py  test_plan_mode.py  test_registry.py  test_safety_checker.py  test_yami_mode.py
tests/unit/rag/: __init__.py  test_embeddings.py  test_lancedb_documents.py  test_lancedb_store.py  test_retriever.py
tests/unit/utils/: test_impact_analyzer.py  test_plan_generator.py
